tests/paczka1/small_fuzzy/40038669.err
Error in line 12: ndBvrs A982 22,0
Error in line 15: Bbeh4 A616 12,/
Error in line 14: ndBvrs A616 97,2
